Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL)
-
None
Description
A warning is generated when querying progress from information_schema.processlist.
MariaDB [(none)]> select progress from information_schema.processlist;
|
+----------+
|
| progress |
|
+----------+
|
| 0 |
|
| 0 |
|
+----------+
|
2 rows in set, 2 warnings (0.001 sec)
|
|
|
MariaDB [(none)]> show warnings;
|
+---------+------+---------------------------------------------------------+
|
| Level | Code | Message |
|
+---------+------+---------------------------------------------------------+
|
| Warning | 1918 | Encountered illegal value '' when converting to DECIMAL |
|
| Warning | 1918 | Encountered illegal value '' when converting to DECIMAL |
|
+---------+------+---------------------------------------------------------+
|
2 rows in set (0.000 sec)
|
|
|
MariaDB [(none)]>
|
Attachments
Issue Links
- blocks
-
MDEV-24510 Assertion `tmp != ((long long) 0x8000000000000000LL)' failed in TIME_from_longlong_datetime_packed & UBSAN: runtime error: negation of -9223372036854775808 cannot be represented in type 'long long int'
-
- Closed
-
-
MDEV-26507 Assertion `tmp != ((long long) 0x8000000000000000LL)' failed in TIME_from_longlong_datetime_packed
-
- Closed
-
- is duplicated by
-
MDEV-28131 Unexpected warning while selecting from information_schema.processlist
-
- Closed
-