MDEV-27673 Warning after "select progress from information_schema.processlist"

after moving fields in optimize_schema_tables_memory_usage()
store default values into their new, moved, locations.